# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml  readme.md  setup.cfg
.github/: .pre-commit-hooks.yaml  codecov.yaml  codecov.yml
.github/workflows/: lint.yaml  test.yaml
pre_commit_hooks/: _yaml_dumper.py  find_trailing_comma.py  force_yaml_extension.py  poetry_check_lock.py  yamlfmt.py
tests/: test_find_tailing_comma.py  test_format_yaml.py
tests/fixtures/: example.yaml
