[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pre-commit-hooks"
version = "0.4.1"
description = ""
authors = ["Trim21 <i@trim21.me>"]
packages = [{ include = "pre_commit_hooks" }]

[tool.poetry.dependencies]
python = "^3.6.1"
"ruamel.yaml" = "0.17.17"
poetry = "^1.1.0"
tokenize-rt = "^4.0.0"

[tool.poetry.scripts]
yamlfmt = 'pre_commit_hooks.yamlfmt:main'
poetry_check_lock = 'pre_commit_hooks.poetry_check_lock:main'
find_trailing_comma = 'pre_commit_hooks.find_trailing_comma:main'
force_yaml_extension = 'pre_commit_hooks.force_yaml_extension:main'

[tool.poetry.dev-dependencies]
# tests
pytest = "==6.2.5"
pytest-github-actions-annotate-failures = "==0.1.6"
coverage = "==6.2"
# linter and formatter
pre-commit = "==2.16.0"
flake8 = '==4.0.1'
flake8-comprehensions = "==3.7.0"
flake8-bugbear = "==21.11.29"
flake8-commas = "==2.1.0"
flake8-mutable = "1.2.0"
flake8-broken-line = "==0.4.0"
flake8-pytest-style = "==1.5.1"
mypy = "==0.920"

[tool.isort]
default_section = 'THIRDPARTY'
indent = '    '
known_first_party = 'pre_commit_hooks'
length_sort = true
line_length = 88
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
use_parentheses = true
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = '-rav'
